--- a/README.org
+++ b/README.org
@@ -59,7 +59,7 @@ COLOR=: 0 0 0
 HISTORY=: ,:0 0 0
 HISTSIZE=: 10
 
-rgbw_form=: noun define
+rgbw_form=: 0 : 0
 pc rgbw; pn "J-color";
 bin h;
   cc pickr isidraw; set pickr wh 50 256;
@@ -76,7 +76,10 @@ bin z;
 pshow;
 )
 
-rgbw_close=: monad : 'wd''psel rgbw;pclose;'''
+rgbw_close=: 3 : 0
+wd'psel rgbw;pclose;'
+wd 'clipcopy ',": COLOR
+)
 #+END_SRC
 
 #+RESULTS:
@@ -103,10 +106,10 @@ color. For ~showc~ no location information is needed; by default the
 string of the 3-vector ~COLOR~ is formatted then copied.
 
 #+BEGIN_SRC j :session :exports code :tangle jcolor.ijs
-rgbw_pickr_mblup=: monad : '0 adjust_color'
-rgbw_pickg_mblup=: monad : '1 adjust_color'
-rgbw_pickb_mblup=: monad : '2 adjust_color'
-rgbw_showc_mblup=: monad : 'wd ''clipcopy '',": COLOR'
+rgbw_pickr_mblup=: 3 : '0 adjust_color'
+rgbw_pickg_mblup=: 3 : '1 adjust_color'
+rgbw_pickb_mblup=: 3 : '2 adjust_color'
+rgbw_showc_mblup=: 3 : 'wd ''clipcopy '',": COLOR'
 
 record_hist=: 3 : 0
 HISTORY=: ~. (<./HISTSIZE,>:#HISTORY) {. COLOR , HISTORY
@@ -115,7 +118,6 @@ wd 'set histt items',,/(' ','"'&,@,&'"'@":)"1 HISTORY
 
 adjust_color=: 1 : 0
 COLOR=:(3#0)>.((1{".sysdata)(m})COLOR)<.3#255
-record_hist''
 update''
 )
 #+END_SRC
@@ -145,14 +147,15 @@ gets drawn can then be (~i.256 50~) with the appropriate rgb color
 going at each row.
 
 #+BEGIN_SRC j :session :exports code :tangle jcolor.ijs
-update=: verb define
+update=: 3 : 0
+record_hist''
 wd'psel rgbw'
 render_child(2;'pickb')[render_child(1;'pickg')[render_child(0;'pickr')
 glpaint''[glfill (COLOR,255)[glclear''[glsel'showc'
 wd'set rgbc text "',(":COLOR),'"'
 )
 
-render_child=: verb define
+render_child=: 3 : 0
 glclear''[glsel child[wd'psel rgbw'['column child'=. y
 ((i.256)&(column})&.|:(256 3$COLOR))viewmatcc(i.256 50);child
 glpaint''
@@ -170,7 +173,7 @@ The event here is button which fires when ~return~ is pressed and
 updates ~COLOR~ to the new value. All drawings subsequently updated.
 
 #+BEGIN_SRC j :session :exports code :tangle jcolor.ijs
-rgbw_rgbc_button=: monad : 'update[COLOR=: (3#0)>.(".wd''get rgbc text'')<.3#255'
+rgbw_rgbc_button=: 3 : 'update[COLOR=: (3#0)>.(".wd''get rgbc text'')<.3#255'
 #+END_SRC
 
 ** combolist
@@ -187,16 +190,15 @@ ensure 6 characters in output), taking last two columns, then finally
 raveling.
 
 #+BEGIN_SRC j :session :exports code :tangle jcolor.ijs
-rgbw_copyt_select=: monad define
+rgbw_copyt_select=: 3 : 0
 select. copyt
-case. 'hex' do. rgbw_showc_mblup=: monad : 'wd ''clipcopy #'',": hex COLOR'
-case. 'rgb' do. rgbw_showc_mblup=: monad : 'wd ''clipcopy '',": COLOR'
+case. 'hex' do. rgbw_showc_mblup=: 3 : 'wd ''clipcopy #'',": hex COLOR'
+case. 'rgb' do. rgbw_showc_mblup=: 3 : 'wd ''clipcopy '',": COLOR'
 end. 'ok'
 )
 
-rgbw_histt_select=: monad define
+rgbw_histt_select=: 3 : 0
 COLOR=: ". histt
-record_hist''
 update''
 )
 
@@ -208,7 +210,7 @@ hex=: [:,[:_2&{."1[:'000'&,.[:":[:{&'0123456789ABCDEF'16&(#.^:_1)
 Only runs if inside jqt (these days ~wd~ only works there).
 
 #+BEGIN_SRC j :session :exports code :tangle jcolor.ijs
-courir=: verb define
+courir=: 3 : 0
 if. IFQT do. update[wd rgbw_form[rgbw_close^:(wdisparent'rgbw')''
 else. echo 'needs qt' end.
 )
