refactor grabbing color

--- a/README.org
+++ b/README.org
@@ -77,8 +77,7 @@ pshow;
 )
 
 rgbw_close=: 3 : 0
-wd'psel rgbw;pclose;'
-wd 'clipcopy ',": COLOR
+grab_color wd'psel rgbw;pclose;'
 )
 #+END_SRC
 
@@ -106,10 +105,15 @@ color. For ~showc~ no location information is needed; by default the
 string of the 3-vector ~COLOR~ is formatted then copied.
 
 #+BEGIN_SRC j :session :exports code :tangle jcolor.ijs
+grab_color=: 3 : 0
+wd 'clipcopy ',": COLOR
+)
+
 rgbw_pickr_mblup=: 3 : '0 adjust_color'
 rgbw_pickg_mblup=: 3 : '1 adjust_color'
 rgbw_pickb_mblup=: 3 : '2 adjust_color'
-rgbw_showc_mblup=: 3 : 'wd ''clipcopy '',": COLOR'
+rgbw_showc_mblup=: grab_color
+
 
 record_hist=: 3 : 0
 HISTORY=: ~. (<./HISTSIZE,>:#HISTORY) {. COLOR , HISTORY
@@ -192,8 +196,8 @@ raveling.
 #+BEGIN_SRC j :session :exports code :tangle jcolor.ijs
 rgbw_copyt_select=: 3 : 0
 select. copyt
-case. 'hex' do. rgbw_showc_mblup=: 3 : 'wd ''clipcopy #'',": hex COLOR'
-case. 'rgb' do. rgbw_showc_mblup=: 3 : 'wd ''clipcopy '',": COLOR'
+case. 'hex' do. grab_color=: 3 : 'wd ''clipcopy #'',": hex COLOR'
+case. 'rgb' do. grab_color=: 3 : 'wd ''clipcopy '',": COLOR'
 end. 'ok'
 )
 
