--- a/README.org
+++ b/README.org
@@ -206,8 +206,10 @@ COLOR=: ". histt
 update''
 )
 
-hex=: [:,[:_2&{."1[:'000'&,.[:":[:{&'0123456789ABCDEF'16&(#.^:_1)
+hex=: [: , ": @ '0123456789ABCDEF' {~ 16 16&#:
 #+END_SRC
+
+#+RESULTS:
 
 * main
 
